rust/mtproxy-ffi/include/mtproxy_ffi.h

struct raw_message;
typedef unsigned (*crc32_partial_func_t)(const void *data, long len,
                                         unsigned crc);
struct raw_message;
struct msg_buffer {
  struct msg_buffers_chunk *chunk;
#ifndef _LP64
  int resvd;
#endif
  int refcnt;
  int magic;
  char data[0];
};
enum {
  BUFF_HD_BYTES = offsetof(struct msg_buffer, data),
};
struct raw_message {
  struct msg_part *first, *last;
  int total_bytes;
  int magic;
  int first_offset;
  int last_offset;
};
int rwm_free(struct raw_message *raw);
int rwm_fetch_data(struct raw_message *raw, void *data, int bytes);
int rwm_skip_data(struct raw_message *raw, int bytes);
int rwm_fetch_lookup(struct raw_message *raw, void *buf, int bytes);
int rwm_fetch_data_back(struct raw_message *raw, void *data, int bytes);
int rwm_split_head(struct raw_message *head, struct raw_message *raw, int bytes);
int rwm_dump(struct raw_message *raw);
unsigned rwm_custom_crc32(struct raw_message *raw, int bytes, crc32_partial_func_t custom_crc32_partial);
typedef job_t connection_job_t;
void tcp_rpc_conn_send_data(int32_t c_tag_int, connection_job_t c, int len, void *Q);
void tcp_rpc_conn_send_data_init(connection_job_t c, int len, void *Q);
void tcp_rpc_conn_send_data_im(int32_t c_tag_int, connection_job_t c, int len, void *Q);
int aes_crypto_init(connection_job_t c, void *key_data, int key_data_len);
typedef struct aes_secret {
  int refcnt;
  int secret_len;
  union {
    char secret[MAX_PWD_LEN + 4];
    int key_signature;
  };
} aes_secret_t;
extern aes_secret_t main_secret;
struct aes_key_data {
  unsigned char read_key[32];
  unsigned char read_iv[16];
  unsigned char write_key[32];
  unsigned char write_iv[16];
};
int aes_create_keys(
    struct aes_key_data *R,
    int am_client,
    const char nonce_server[16],
    const char nonce_client[16],
    int client_timestamp,
    unsigned server_ip,
    unsigned short server_port,
    const unsigned char server_ipv6[16],
    unsigned client_ip,
    unsigned short client_port,
    const unsigned char client_ipv6[16],
    const aes_secret_t *key,
    const unsigned char *temp_key,
    int temp_key_len);
extern int dh_params_select;
int init_dh_params(void);
int dh_second_round(unsigned char g_ab[256], unsigned char g_a[256], const unsigned char g_b[256]);