common/rust-crc-compat.h

unsigned crc32_partial(const void *data, long len, unsigned crc);
unsigned crc32c_partial(const void *data, long len, unsigned crc);