common/pid.h

struct process_id {
  unsigned ip;
  short port;
  unsigned short pid;
  int utime;
};
typedef struct process_id npid_t;
extern npid_t PID;
void init_server_PID(unsigned ip, int port);
/* returns 1 if X is a special case of Y, 2 if they match completely */
int matches_pid(struct process_id *X, struct process_id *Y);